unpackaged/main/default/objects/Country_Definition__c/Country_Definition__c.object-meta.xml
<CustomObject>
    <label>Country Definition</label>
    <nameField>
        <label>Country Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Definitions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>