unpackaged/main/default/objects/Country_Definition__c/fields/Country_Address_Tools__c.field-meta.xml
<CustomField>
    <fullName>Country_Address_Tools__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Country (Address Tools)</label>
    <referenceTo>pw_ccpro__CountryObject__c</referenceTo>
    <relationshipLabel>Country Definitions</relationshipLabel>
    <relationshipName>Country_Definitions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>