unpackaged/main/default/objects/Country_Definition__c/fields/GDP_Category__c.field-meta.xml
<CustomField>
    <fullName>GDP_Category__c</fullName>
    <label>GDP Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>