unpackaged/main/default/objects/Country_Definition__c/fields/Intermediate_Region_Based_on_State__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Region_Based_on_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intermediate Region Based on State?</label>
    <type>Checkbox</type>
</CustomField>