unpackaged/main/default/objects/Country_Definition__c/fields/Sort_Index__c.field-meta.xml
<CustomField>
    <fullName>Sort_Index__c</fullName>
    <label>Sort Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>