unpackaged/main/default/objects/Country_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Subregion__c</columns>
    <columns>Intermediate_Region__c</columns>
    <columns>Territory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>